Feature/load details (#90)
* Add component & controller code

* Add comment input field

* Responsive input field add comment

* Milestone comments responsive layout

* Add milestone param to url

* Add request milestone detail

* Add no selected msg

* Insert milestone-comments directive in main page

* Remove session service from timelinecomponent
Update MilestoneComponent to dumb component
Update Milestonedetailspage

* Added milestone list with async loading and routing

* Add navigator
Add call to navigator in timelinecomponent

* Add details page

* Add tab navigation

* Add feedback no milestones

* Add goto last navigation
Remove router outlet from dashboard component
Remove unused route profilecomponent

* Add milestone-details material design styling

* Add milestone-comments and list material design styling

* Add methods to mocks

* Fix usedefault

--- a/src/app/profile/milestones-details-page/milestone-details-page-template.html
+++ b/src/app/profile/milestones-details-page/milestone-details-page-template.html
@@ -1,76 +1,24 @@
 <div layout="row" flex>
   <span flex="10"></span>
-  <div layout="column" flex="60">
+  <div layout="column" flex="60" class="no-height-stretch">
     <milestone-details></milestone-details>
-    <md-card>
-      <md-card-title>
-        Comments
-      </md-card-title>
-      <md-card-content>
-        <br/>
-        <br/>
-
-        <br/>
-
-        <br/>
-
-        <br/>
-
-        <br/>
-
-        <br/>
-        <br/>
-        <br/>
-
-        <br/>
-
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-      </md-card-content>
-    </md-card>
+    <milestone-comments></milestone-comments>
   </div>
   <md-card flex="40">
-    <md-card-title>
-      Milestone list
-    </md-card-title>
-    <md-card-content>
-      <br/>
-      <br/>
-
-      <br/>
-
-      <br/>
-
-      <br/>
-
-      <br/>
-
-      <br/>
-      <br/>
-      <br/>
-
-      <br/>
-
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
+    <div class="loading-container" layout="row" layout-align="center center" ng-if="!$ctrl.milestonesLoaded">
+      <md-progress-circular class="md-primary" md-mode="indeterminate" md-diameter="60"></md-progress-circular>
+    </div>
+    <md-card-content ng-if="$ctrl.milestonesLoaded">
+      <p class="md-headline">Milestones</p>
+      <md-list>
+        <milestone-item
+          ng-class="$ctrl.selectedMilestone.objective.title === mile.objective.title ? 'milestone-selected' : ''"
+          ng-if="$ctrl.milestones.length >0"
+          on-selected="$ctrl.onMilestoneSelected($locals)"
+          milestone="mile"
+          ng-repeat="mile in $ctrl.milestones">
+        </milestone-item>
+      </md-list>
     </md-card-content>
   </md-card>
   <span flex="10"></span>
