--- a/src/app/layout/header/header-styles.scss
+++ b/src/app/layout/header/header-styles.scss
@@ -1,10 +1,13 @@
 app-header {
+  .bg-title-header {
+    background-color: rgba(0, 0, 0, 0.21);
+    padding: 0.5em;
+  }
   div {
-    min-height: 120px;
+    min-height: 160px;
     max-height: 160px;
-    background: orange url('./header-bg.png');
+    background: orange url('./header_360.jpg');
     background-size: cover;
     color: white;
-    padding: 2em 2em 0;
   }
 }
