--- a/src/app/profile/milestones-details-page/milestone-details-page-template.html
+++ b/src/app/profile/milestones-details-page/milestone-details-page-template.html
@@ -5,11 +5,13 @@
     <milestone-comments></milestone-comments>
   </div>
   <md-card flex="40">
+    <md-card-title>
+      <p class="no-top-margin no-bottom-margin md-headline">Milestones</p>
+    </md-card-title>
     <div class="loading-container" layout="row" layout-align="center center" ng-if="!$ctrl.milestonesLoaded">
       <md-progress-circular class="md-primary" md-mode="indeterminate" md-diameter="60"></md-progress-circular>
     </div>
     <md-card-content ng-if="$ctrl.milestonesLoaded">
-      <p class="md-headline">Milestones</p>
       <md-list>
         <milestone-item
           ng-class="$ctrl.selectedMilestone.objective.title === mile.objective.title ? 'milestone-selected' : ''"
