--- a/src/app/profile/about/about-directive-template.html
+++ b/src/app/profile/about/about-directive-template.html
@@ -28,15 +28,15 @@
         </card-header>
 
         <!-- Show info -->
-        <div class="about-content" layout="row" layout-xs="column" ng-if="!about.isEditModeEnabled">
+        <div class="about-content" layout="row" ng-if="!about.isEditModeEnabled">
 
           <!-- Left column: Picture -->
-          <div flex="25" class="about-img" layout="column" layout-align="start top" layout-align-xs="center center">
+          <div class="about-img sample" layout="column" layout-align="start top" layout-align-xs="center center">
             <img ng-src="{{about.profilePicture}}" alt="Profile picture" class="sample">
           </div>
 
           <!-- Center column: Overview -->
-          <div flex="30" layout="column">
+          <div flex="35" layout="column">
             <div class="about-job">
 
               <!-- Function -->
@@ -81,7 +81,7 @@
           </div>
 
           <!-- Right column: Description -->
-          <div flex="45" flex-gt-sm="70" class="about-description">
+          <div flex="40" flex-gt-sm="70" class="about-description">
             <p class="translate-whitespace" ng-if="about.employee.description"><span ng-if="about.isCollapsed">{{about.shortDescription}}</span><span
               ng-if="!about.isCollapsed">{{about.employee.description}}</span></p>
           </div>
@@ -183,7 +183,7 @@
           </div>
 
           <!-- Right column: Description -->
-          <div flex="45" flex-gt-sm="70" class="about-description positioning-right-column">
+          <div flex="40" flex-gt-sm="70" class="about-description positioning-right-column">
             <div>
               <md-input-container class="md-block" flex-gt-xs>
                 <label>Description</label>
