Fix date time and api typo

--- a/src/app/profile/milestones/milestone-comments/milestone-comments.html
+++ b/src/app/profile/milestones/milestone-comments/milestone-comments.html
@@ -18,7 +18,7 @@
       <div class="profilePicture"></div>
       <div class="comment">
         <div class="commentTitle">
-          <strong>{{comment.username}}</strong> - <span class="commentTimestamp">{{comment.createDate | date}}</span>
+          <strong>{{comment.username}}</strong> - <span class="commentTimestamp">{{comment.createDate | date : "medium"}}</span>
         </div>
         <div class="commentMessage">
           {{comment.message}}
