Remove carriage return

--- a/src/app/profile/milestones-details-page/milestone-details-page-template.html
+++ b/src/app/profile/milestones-details-page/milestone-details-page-template.html
@@ -9,8 +9,7 @@
       <p class="no-top-margin no-bottom-margin md-headline">Milestones</p>
     </md-card-title>
     <div class="loading-container" layout="row" layout-align="center center" ng-if="!$ctrl.milestonesLoaded">
-      <md-progress-circular class="md-primary" md-mode="indetermin
-      ate" md-diameter="60"></md-progress-circular>
+      <md-progress-circular class="md-primary" md-mode="indeterminate" md-diameter="60"></md-progress-circular>
     </div>
     <md-card-content ng-if="$ctrl.milestonesLoaded">
       <md-list>
