--- a/src/app/profile/milestones/milestone-details/milestone-details.html
+++ b/src/app/profile/milestones/milestone-details/milestone-details.html
@@ -1,4 +1,4 @@
-<md-card>
+<md-card id="milestone-details">
   <md-card-title>
     <md-card-title-text>
       <div ng-if="milestoneDetails.milestone" layout="row">
