--- a/src/app/layout/toolbar/toolbar.html
+++ b/src/app/layout/toolbar/toolbar.html
@@ -6,6 +6,7 @@
     </div>
     <profile-search flex="60"></profile-search>
     <div layout="row" flex="20" layout-align="end center">
+      <notifications></notifications>
       <md-menu id="user-menu">
         <md-button aria-label="Open account menu" ng-click="$ctrl.openMenu($mdOpenMenu, $event)">
           <md-icon md-menu-origin md-svg-icon="{{$ctrl.buttons[0].icon}}"></md-icon>
