E2e added for editing the details of a milestone

--- a/src/app/profile/milestones/milestone-details/milestone-details.html
+++ b/src/app/profile/milestones/milestone-details/milestone-details.html
@@ -14,7 +14,7 @@
         <md-button
           aria-label="Edit"
           ng-click="milestoneDetails.showEditDialog()"
-          class="btnSave md-icon-button md-warn">
+          class="btnEdit md-icon-button md-warn">
           <md-icon md-svg-icon="content:create"></md-icon>
         </md-button>
       </div>
