--- a/src/app/profile/milestones/milestone-edit-dialog/milestone-edit.template.html
+++ b/src/app/profile/milestones/milestone-edit-dialog/milestone-edit.template.html
@@ -1,6 +1,6 @@
-<md-dialog>
+<md-dialog id="edit-milestone">
   <md-dialog-content>
-    <form class="edit-milestone" name="milestoneCreateForm" novalidate>
+    <form name="milestoneCreateForm" novalidate>
       <div ng-if="$ctrl.milestone.objective">
         <span class="material-label">Objective</span>
         <p class="material-text no-top-margin" ng-if="$ctrl.milestone.objective.description">
@@ -41,7 +41,7 @@
     <md-button ng-click="$ctrl.cancel()">
       Cancel
     </md-button>
-    <md-button ng-click="$ctrl.ok()">
+    <md-button class="btnOk" ng-click="$ctrl.ok()">
       OK
     </md-button>
   </md-dialog-actions>
