Added e2e test for milestone done.

--- a/src/app/profile/milestones/milestone-edit-dialog/milestone-edit.template.html
+++ b/src/app/profile/milestones/milestone-edit-dialog/milestone-edit.template.html
@@ -37,7 +37,7 @@
           </div>
         </div>
       </md-input-container>
-      <md-checkbox ng-model="$ctrl.isAccomplished" aria-label="Mark as accomplished">
+      <md-checkbox ng-model="$ctrl.isAccomplished" class="checkAccomplished" aria-label="Mark as accomplished">
         Mark as accomplished
       </md-checkbox>
     </form>
