--- a/src/app/profile/milestones/milestone-edit-dialog/milestone-edit.template.html
+++ b/src/app/profile/milestones/milestone-edit-dialog/milestone-edit.template.html
@@ -43,7 +43,7 @@
     </form>
   </md-dialog-content>
   <md-dialog-actions>
-    <md-button ng-click="$ctrl.cancel()">
+    <md-button class="btnCancel" ng-click="$ctrl.cancel()">
       Cancel
     </md-button>
     <md-button class="btnOk" ng-click="$ctrl.ok()">
