Comments only are shown when a milestone is selected

--- a/src/app/profile/milestones-details-page/milestone-details-page-template.html
+++ b/src/app/profile/milestones-details-page/milestone-details-page-template.html
@@ -2,7 +2,7 @@
   <span flex="10"></span>
   <div layout="column" flex="60" class="no-height-stretch">
     <milestone-details></milestone-details>
-    <milestone-comments></milestone-comments>
+    <milestone-comments ng-if="$ctrl.selectedMilestone"></milestone-comments>
   </div>
   <md-card flex="40">
     <md-card-title>
