Push notifications to view and apply styles when unread

--- a/src/app/core/components/notifications/notifications.html
+++ b/src/app/core/components/notifications/notifications.html
@@ -3,10 +3,10 @@
     <md-button aria-label="Open notifications menu" ng-click="notifications.openMenu($mdOpenMenu, $event)">
       <md-icon md-menu-origin md-svg-icon="{{notifications.buttons[0].icon}}"></md-icon>
     </md-button>
-    <md-menu-content width="3">
-      <md-menu-item>
-        <md-button aria-label="Notification" ng-click="notifications.goToNotification()">
-          Notification
+    <md-menu-content width="4">
+      <md-menu-item ng-repeat="notification in notifications.notifications">
+        <md-button aria-label="Notification" ng-click="notifications.goToNotification()" ng-class="{unread: notification.read==false}">
+          <strong>{{notification.subscriber}}</strong> - {{notification.message}}
         </md-button>
       </md-menu-item>
     </md-menu-content>
