--- a/src/app/core/components/notifications/notifications.html
+++ b/src/app/core/components/notifications/notifications.html
@@ -1,5 +1,5 @@
 <div>
-  <md-menu id="user-menu">
+  <md-menu>
     <md-button aria-label="Open notifications menu" ng-click="notifications.openMenu($mdOpenMenu, $event)">
       <md-icon md-menu-origin md-svg-icon="{{notifications.buttons[0].icon}}"></md-icon>
     </md-button>
