refactor(profile-search): better naming and typing

--- a/src/app/core/components/profile-search/profile-search.html
+++ b/src/app/core/components/profile-search/profile-search.html
@@ -12,6 +12,6 @@
     <span md-highlight-text="$ctrl.searchText" md-highlight-flags="^i">{{item.display}}</span>
   </md-item-template>
   <md-not-found>
-    Your search for <strong>"{{$ctrl.searchText}}"</strong> did not supply any results.
+    <span>Your search for <strong>"{{$ctrl.searchText}}"</strong> did not supply any results.</span>
   </md-not-found>
 </md-autocomplete>
