refactor(profile-about):
remove directive
add component

--- a/src/app/profile/about/about-card-styles.scss
+++ b/src/app/profile/about/about-card-styles.scss
@@ -10,7 +10,7 @@ $accentColor: #ED9424;
 $profileContentMarginTop: 0.5em;
 $layout-xs-max-width: 600px;
 
-profile-about {
+about-card {
   h3 {
     margin: 0;
   }
