--- a/src/app/profile/summary-page/summary-page-template.html
+++ b/src/app/profile/summary-page/summary-page-template.html
@@ -1,7 +1,7 @@
 <div layout="row">
   <span flex="10"></span>
-  <div layout-gt-xs="column" flex layout-gt-md="row">
-    <about-card></about-card>
+  <div layout-gt-xs="column" layout-gt-md="row">
+    <about-card flex-gt-md="45" flex-xs="100"></about-card>
     <milestone-container id="milestone-container" flex></milestone-container>
   </div>
   <span flex="10"></span>
