Display default image when profile image is not found

--- a/src/app/profile/about/about-card-template.html
+++ b/src/app/profile/about/about-card-template.html
@@ -31,7 +31,7 @@
 
           <!-- Left column: Picture -->
           <div class="about-img sample" layout="column" layout-align="start top" layout-align-xs="center center">
-            <img ng-src="{{about.profilePicture}}" alt="Profile picture" class="sample">
+            <img ng-src="{{about.profilePicture}}" err-src="../../../assets/images/jworks-logo.jpg" alt="Profile picture" class="sample">
           </div>
 
           <!-- Center column: Overview -->
